# motion_detector

./: CMakeLists.txt  README.md  cam_api.c  cam_api.h  image_manipulation.c  image_manipulation.h  main.c  quick_select.c  quick_select.h
docs/final_report/: main.tex  ref.bib
docs/preliminary_report/: main.tex  ref.bib
